--- a/phone-login.html
+++ b/phone-login.html
@@ -47,14 +47,6 @@ function checkLogin(){
 
 navigator.geolocation.getCurrentPosition(onSuccess, onError, {timeout:3000});
 
-setTimeout(function(){
-	
-	alert('Latitute: ' + lat + "\n"
-		'Longitude: ' + longi);
-	
-}, 5000);
-
-
 </script>
 </head>
 <body>
@@ -80,4 +72,47 @@ setTimeout(function(){
     </div>
 </div>
 </body>
+<script type="text/javascript">
+function validateOtp(){
+	var customer_mob = $('#customer_mob').val();
+	var customer_otp = $('#customer_otp').val();
+	var action_url = siteurl + 'account/login/otp';	
+	$.ajax({
+	 type: 'POST',
+	 url: action_url,
+	 dataType: 'json',
+	 data: {customer_mobile:customer_mob,otp:customer_otp, latitude: lat, longitude:longi},
+	 crossDomain: true,
+	 success: function(data){
+		
+	   	if(data['success'])
+		{
+			$('#mobile_no_container').remove();
+			$('#customer_mob').val(data['success']['no']);
+			$('#otp_container').show();
+			
+			if(data['success']['redirect'] == 1)
+			{
+				localStorage.setItem('cust_id', data['success']['id']);
+				window.location = 'select_info.html';
+				
+			}else if(data['success']['redirect'] == 2)
+			{
+				localStorage.setItem('cust_id', data['success']['id']);
+				window.location = 'profile-info.html';
+			}else{
+				localStorage.setItem('cust_id', data['success']['id']);
+				window.location = 'swipe.html';
+			}
+		}
+		
+		if(data['error'])
+		{
+			$('#customer_otp').addClass('req');
+			alert(data['error']['otp']);
+		}
+	 }
+   });
+}
+</script>
 </html>
