--- a/edit-profile.html
+++ b/edit-profile.html
@@ -159,7 +159,7 @@
         function uploadPhoto(imageURI1) {
 			$("#loadingImg").fadeIn();
 			
-			var upload_url = siteurl + '?route=account/upload';			
+			var upload_url = siteurl + 'account/upload';			
             var options1 = new FileUploadOptions();
             options1.fileKey="file";
             options1.fileName=imageURI1.substr(imageURI1.lastIndexOf('/')+1);
