--- a/profile-info.html
+++ b/profile-info.html
@@ -178,7 +178,8 @@
  
         function fail1(error) {
            $("#loadingImg").fadeOut();
-			alert('Failed to upload.');
+			//alert('Failed to upload.');
+			alert(error);
         }
  </script>
 <script type="text/javascript">
