--- a/profile-info.html
+++ b/profile-info.html
@@ -96,7 +96,7 @@
                 <textarea class="form-control" name="about_med_his" id="about_med_his" placeholder="Please explain about medical history."></textarea>
             </div>
             <div class="form-group uploadbtns">
-                <button type="button" class="btn btn-dark" onclick="uploadFromGallery();">Upload Photo</button>
+                <button type="button" class="btn btn-dark" onclick="getImage();">Upload Photo</button>
                 <input type="text" name="pet_image" id="pet_image">
                 <p class="error_msg" style="display:none;">Please upload pet image.</p>
                 <!--<button type="button" class="btn btn-dark">Upload Instagram Photo</button>-->
