--- a/phone-login.html
+++ b/phone-login.html
@@ -31,9 +31,10 @@ function onError(error){
 
 
 function checkdeviceLogin(){
-	navigator.geolocation.getCurrentPosition(onSuccess, onError, {maximumAge:60000, timeout:5000, enableHighAccuracy:true});
+	navigator.geolocation.getCurrentPosition(onSuccess, onError, {maximumAge:7000, timeout:3000, enableHighAccuracy:true});
 	
-	alert(localStorage.getItem("cust_id"));
+	setTimeout(function(){
+	
 	if(localStorage.getItem("cust_id") != null)
 	{	
 		var msg = 'Customer ID:' + localStorage.getItem("cust_id") + "\n";
@@ -59,6 +60,8 @@ function checkdeviceLogin(){
 	   });
 		
 	}
+	}, 3000);
+	
 }
 
 document.addEventListener("deviceready", checkdeviceLogin, false);
