--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript">
 
-setTimeout(function(){
+cordova.plugins.diagnostic.isGpsLocationEnabled(function(enabled){
+   setTimeout(function(){
 	window.location = 'login.html';
 }, 3000);
+}, function(error){
+    cordova.plugins.diagnostic.switchToLocationSettings();
+});  
+
 </script>
 </head>
 
