--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/function.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript">
 
-setTimeout(function(){
+/*setTimeout(function(){
 	window.location = 'login.html';
-}, 3000);
+}, 3000);*/
+
+cordova.plugins.diagnostic.isGpsLocationEnabled(function(enabled){
+    alert("GPS location is " + (enabled ? "enabled" : "disabled"));
+}, function(error){
+    alert("The following error occurred: "+error);
+});  
 </script>
 </head>
 
