--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function checkDeviceGPS(){
 		{
 			window.location = 'login.html';
 		}else{
-			alert('Please enable your GPS.');
+			alert('Please enable your location settings.');
 			cordova.plugins.diagnostic.switchToLocationSettings();
 		}
 		
