--- a/edit-profile.html
+++ b/edit-profile.html
@@ -9,9 +9,9 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/function.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript">
  checkLogin();
 </script>
@@ -183,7 +183,7 @@
 			if(resturn_data_1.success)
 			{
 				$('#pet_image_src').attr('src', resturn_data_1.success);				
-				$("#pet_image").val(resturn_data_1.img_name);
+				$('input[name="pet_image"]').val(resturn_data_1.img_name);
 			}else if(resturn_data_1.error)
 			{								
 				alert(resturn_data_1.error);
@@ -296,6 +296,12 @@ $.ajax({
 				{
 					$('#specific_breed [value="'+ data['success']['breed_specific'] +'"]').attr('selected', 'true');
 				}
+			}
+			
+			if(data['success']['image'])
+			{
+				$('#pet_image_src').attr('src', data['success']['image']);
+				$('input[name="pet_image"]').val(data['success']['image_name']);	
 			}
 	   }
    });
