--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
 <link rel="stylesheet" href="css/owl.theme.default.css">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/style.css">
+<script type="text/javascript" src="cordova.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/function.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 </head>
 
 <body>
