--- a/profile-info.html
+++ b/profile-info.html
@@ -14,7 +14,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/function.js"></script>
 <script type="text/javascript">
- //checkLogin();
+ checkLogin();
 </script>
 </head>
 <body class="bottom-links-bar">
