--- a/select_info.html
+++ b/select_info.html
@@ -8,12 +8,12 @@
 <title>Animal App</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
-<!--<script type="text/javascript" src="cordova.js"></script>-->
+<script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/function.js"></script>
 <script type="text/javascript">
- //checkLogin();
+ checkLogin();
 </script>
 </head>
 <body class="">
