--- a/edit-profile.html
+++ b/edit-profile.html
@@ -25,13 +25,13 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">Profile</span></a>
+        <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Setting</a>
      </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
 
 
 
@@ -249,7 +249,7 @@ $.ajax({
 });
 
 $(document).ready(function(e){
-    $('input[name="medical_history"]').on('click',function(){
+    /*$('input[name="medical_history"]').on('click',function(){
 		
 		if($('input[name="medical_history"]:checked').val() == 1)
 		{
@@ -257,7 +257,7 @@ $(document).ready(function(e){
 		}else{
 			$('.about_medical').hide();
 		}
-	});
+	});*/
 	
 	$('select[name="who_play_breed"]').on('change',function(){
 		if($(this).val() == 2) $('#breed_specific').show();
