--- a/swipe.html
+++ b/swipe.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/swiper.css">
 <link rel="stylesheet" href="css/main.css">
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/function.js"></script> 
@@ -21,6 +22,31 @@ checkLogin();
 </script>
 </head>
 <body class="bottom-links-bar profile-swipes">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">Profile</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0);">Setting</a>
+     </li>
+	   <li class="nav-item">
+        <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
+
+
+
+     </li>
+    </ul>
+
+  </div>
+</nav>
+
 <div class="breed-detail-wrap">
     <div class="container">
   <header class="profilebanner">
