--- a/edit-profile.html
+++ b/edit-profile.html
@@ -28,7 +28,7 @@
         <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Setting</a>
+        <a class="nav-link" href="your-connections.html">Setting</a>
      </li>
 	   <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
