--- a/your-connections.html
+++ b/your-connections.html
@@ -26,10 +26,33 @@
 <!-- Common Style CSS -->
 <link rel="stylesheet" href="css/style.css">
 <!-- /Common Style CSS -->
-
+<script src="js/jquery.min.js"></script>
 </head>
 
 <body class="bottom-links-bar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
+    <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
+  </button>
+  
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">Profile</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Setting</a>
+     </li>
+	   <li class="nav-item">
+        <a class="nav-link" href="#">Logout</a>
+
+
+
+     </li>
+    </ul>
+
+  </div>
+</nav>
 <div class="container">
     <div class="your-connections mt-4">
         <h1 class="red">YOUR CONNECTIONS</h1>
