--- a/your-connections.html
+++ b/your-connections.html
@@ -38,21 +38,17 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">Profile</span></a>
+        <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Setting</a>
+        <a class="nav-link" href="javascript:void(0);">Setting</a>
      </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
-
-
-
-     </li>
+        <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
     </ul>
-
   </div>
 </nav>
+
 <div class="container">
     <div class="your-connections mt-4">
         <h1 class="red">YOUR CONNECTIONS</h1>
