--- a/edit-profile.html
+++ b/edit-profile.html
@@ -20,31 +20,24 @@
 <body class="bottom-links-bar">
 <nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
   </button>
   
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
+        <a class="nav-link" href="javascript:void(0);">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="your-connections.html">Setting</a>
+        <a class="nav-link" href="javascript:void(0);">Setting</a>
      </li>
 	   <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
-
-
-
-     </li>
     </ul>
-
   </div>
 </nav>
 
-
 <div class="container">
-
     <div class="edit-profile mt-4">
         <h1 class="red">EDIT PROFILE</h1>
         <form>
