--- a/swipe.html
+++ b/swipe.html
@@ -25,7 +25,7 @@ checkLogin();
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
   </button>
   
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -38,12 +38,7 @@ checkLogin();
      </li>
 	   <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
-
-
-
-     </li>
     </ul>
-
   </div>
 </nav>
 
